--- a/src/main/resources/postventa.jrxml
+++ b/src/main/resources/postventa.jrxml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="postventa" pageWidth="600" pageHeight="792" whenNoDataType="AllSectionsNoDetail" columnWidth="560" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d99b0d33-270b-4727-8e02-395561f70e20">
-	<property name="ireport.zoom" value="1.610510000000052"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="96"/>
+	<property name="ireport.zoom" value="4.177248169415789"/>
+	<property name="ireport.x" value="1240"/>
+	<property name="ireport.y" value="177"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[""]]></defaultValueExpression>
 	</parameter>
 	<parameter name="casoOrigen" class="com.itcs.helpdesk.persistence.entities.Caso" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<parameter name="logoProyecto" class="java.io.InputStream"/>
 	<parameter name="fechaVisita" class="java.util.Date" isForPrompting="false"/>
 	<parameter name="fechaReparacion" class="java.util.Date" isForPrompting="false"/>
-	<parameter name="itemsAReparar" class="java.util.List" isForPrompting="false"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
 	<field name="idItem" class="java.lang.Integer">
 		<fieldDescription><![CDATA[idItem]]></fieldDescription>
+	</field>
+	<field name="nombreFullPath" class="java.lang.String">
+		<fieldDescription><![CDATA[nombreFullPath]]></fieldDescription>
 	</field>
 	<background>
 		<band height="752">
@@ -48,7 +49,7 @@
 		</band>
 	</background>
 	<pageHeader>
-		<band height="203">
+		<band height="238">
 			<staticText>
 				<reportElement uuid="2ce9f05a-6b15-4dc5-8d66-2f325fe1528a" x="175" y="39" width="261" height="20"/>
 				<textElement>
@@ -58,7 +59,7 @@
 			</staticText>
 			<staticText>
 				<reportElement uuid="ba495257-d5f8-4aaa-9f05-3ecaef5f91ec" x="376" y="61" width="100" height="15"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="9" isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
 				<text><![CDATA[Santiago,]]></text>
@@ -201,126 +202,144 @@
 				<textFieldExpression><![CDATA[$P{fechaVisita}]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd &apos;de&apos; MMMMM &apos;de&apos; yyyy">
-				<reportElement uuid="1378b0cf-6c74-48c6-b8cc-fc4762b689ef" x="423" y="61" width="153" height="15"/>
-				<textElement/>
+				<reportElement uuid="1378b0cf-6c74-48c6-b8cc-fc4762b689ef" x="421" y="61" width="153" height="15"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
-		</band>
-	</pageHeader>
-	<detail>
-		<band height="34">
 			<line>
-				<reportElement uuid="c97ec02f-cf82-4f55-9757-03f013bd113e" x="559" y="0" width="1" height="33"/>
+				<reportElement uuid="c97ec02f-cf82-4f55-9757-03f013bd113e" x="559" y="200" width="1" height="38"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="edf0cfe1-8415-415d-89b8-83bc087dbd7c" x="0" y="0" width="1" height="34"/>
+				<reportElement uuid="edf0cfe1-8415-415d-89b8-83bc087dbd7c" x="0" y="200" width="1" height="38"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement uuid="905cea83-6fb6-40e2-bda9-08d722643e7b" x="3" y="18" width="572" height="15"/>
+				<reportElement uuid="905cea83-6fb6-40e2-bda9-08d722643e7b" x="3" y="218" width="572" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Programa de mantención de la vivienda establecido en el Manual de Uso y Mantención de la Vivienda CCHC]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="fc1392c0-b2e8-499b-b188-af78521311e3" x="3" y="1" width="572" height="15"/>
+				<reportElement uuid="fc1392c0-b2e8-499b-b188-af78521311e3" x="3" y="201" width="572" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9" isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
 				<text><![CDATA[Información entregada:]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="94836db5-6871-4868-b317-6a98cc46a4d7" x="1" y="0" width="559" height="1"/>
+				<reportElement uuid="94836db5-6871-4868-b317-6a98cc46a4d7" x="1" y="200" width="559" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 		</band>
-		<band height="33">
+	</pageHeader>
+	<columnHeader>
+		<band height="20">
+			<line>
+				<reportElement uuid="91581e7c-a521-4c6c-9882-30a77fa67a32" x="1" y="0" width="559" height="1"/>
+				<graphicElement>
+					<pen lineWidth="0.5"/>
+				</graphicElement>
+			</line>
 			<staticText>
-				<reportElement uuid="d78093a8-0d96-4d2b-b2cd-ceb5119903bf" x="3" y="1" width="550" height="15"/>
+				<reportElement uuid="d78093a8-0d96-4d2b-b2cd-ceb5119903bf" x="3" y="2" width="550" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9" isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
 				<text><![CDATA[Sellos a Reparar:]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="91581e7c-a521-4c6c-9882-30a77fa67a32" x="1" y="16" width="559" height="1"/>
+				<reportElement uuid="2d400654-7d99-401d-88fb-87724d434d3b" x="1" y="19" width="559" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="2d400654-7d99-401d-88fb-87724d434d3b" x="1" y="0" width="559" height="1"/>
+				<reportElement uuid="d466d186-76d0-4587-a9a7-b3230a6a49bf" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="20"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="d466d186-76d0-4587-a9a7-b3230a6a49bf" stretchType="RelativeToBandHeight" x="0" y="-16" width="1" height="48"/>
+				<reportElement uuid="13e1e505-cd6b-4d5c-aed6-9620ffdaf5bf" stretchType="RelativeToBandHeight" x="559" y="0" width="1" height="20"/>
+				<graphicElement>
+					<pen lineWidth="0.5"/>
+				</graphicElement>
+			</line>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="20">
+			<line>
+				<reportElement uuid="e439f1af-13ea-49a7-b904-dcac20cb7034" stretchType="RelativeToBandHeight" x="1" y="19" width="559" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="13e1e505-cd6b-4d5c-aed6-9620ffdaf5bf" stretchType="RelativeToBandHeight" x="559" y="-16" width="1" height="48"/>
+				<reportElement uuid="48b31a0f-8305-4ec4-be77-05f69abb358e" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="20"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="e439f1af-13ea-49a7-b904-dcac20cb7034" stretchType="RelativeToBandHeight" x="1" y="32" width="559" height="1"/>
+				<reportElement uuid="e88f010b-9ded-4661-b96d-475374bff51c" stretchType="RelativeToBandHeight" x="559" y="0" width="1" height="20"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="05035c51-300f-4b08-a4e6-bdfe18d26f79" stretchType="RelativeToTallestObject" x="3" y="17" width="550" height="15"/>
+			<textField>
+				<reportElement uuid="d35157d9-f414-485a-a18f-61a5c1bd947c" x="3" y="0" width="557" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{idItem}.toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nombreFullPath}]]></textFieldExpression>
 			</textField>
 		</band>
-		<band height="18">
+	</detail>
+	<pageFooter>
+		<band height="20">
 			<line>
-				<reportElement uuid="ff5710e0-d7fb-4e2c-91a9-3d73c50e151a" x="1" y="16" width="559" height="1"/>
+				<reportElement uuid="ff5710e0-d7fb-4e2c-91a9-3d73c50e151a" x="1" y="17" width="559" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement uuid="7753d0ac-8113-43f4-9229-c953127bd01d" x="3" y="0" width="550" height="15"/>
+				<reportElement uuid="7753d0ac-8113-43f4-9229-c953127bd01d" x="3" y="1" width="550" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9" isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Reparación:]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="b8ecda14-527a-4640-bd1a-7ed735673062" x="0" y="-1" width="1" height="18"/>
+				<reportElement uuid="b8ecda14-527a-4640-bd1a-7ed735673062" x="0" y="0" width="1" height="18"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement uuid="3336f8bd-872c-4e06-964a-ac631bb9f73c" x="559" y="-1" width="1" height="18"/>
+				<reportElement uuid="3336f8bd-872c-4e06-964a-ac631bb9f73c" x="559" y="0" width="1" height="18"/>
 				<graphicElement>
 					<pen lineWidth="0.5"/>
 				</graphicElement>
 			</line>
 			<textField pattern="EEEEE dd &apos;de&apos; MMMMM &apos;de&apos; yyyy" isBlankWhenNull="true">
-				<reportElement uuid="a4af492d-f64f-436a-bee2-df9c11799dd0" x="114" y="0" width="379" height="15"/>
+				<reportElement uuid="a4af492d-f64f-436a-bee2-df9c11799dd0" x="114" y="1" width="379" height="15"/>
 				<textElement verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fechaReparacion}]]></textFieldExpression>
 			</textField>
 		</band>
-	</detail>
+	</pageFooter>
 </jasperReport>
