--- a/src/main/resources/ActaPreEntrega.jrxml
+++ b/src/main/resources/ActaPreEntrega.jrxml
@@ -268,7 +268,7 @@
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="aa9315c5-5db3-4cb1-a580-0fbebc18dff9" stretchType="RelativeToTallestObject" x="13" y="0" width="50" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9"/>
@@ -293,6 +293,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="a6099241-fb05-4da8-9c56-cc540c9bbf36" stretchType="RelativeToTallestObject" x="63" y="0" width="100" height="20"/>
 				<textElement verticalAlignment="Middle">
+					<font size="9"/>
 					<paragraph leftIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{idRecinto}]]></textFieldExpression>
@@ -300,20 +301,21 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="20782c50-525e-4361-88d9-dc8f4caa6b06" stretchType="RelativeToTallestObject" x="163" y="0" width="177" height="20"/>
 				<textElement verticalAlignment="Middle">
+					<font size="9"/>
 					<paragraph leftIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{idItem}.toString()]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="baa332e8-d417-4129-aa8a-439201cdf1dc" stretchType="RelativeToTallestObject" x="340" y="0" width="200" height="20"/>
-				<textElement verticalAlignment="Middle">
-					<paragraph leftIndent="2"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
-			</textField>
 			<line>
 				<reportElement uuid="110c1cc7-4076-4d7b-badb-a947850247c4" positionType="FixRelativeToBottom" stretchType="RelativeToBandHeight" x="13" y="19" width="527" height="1"/>
 			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="d4cc9fd1-fb29-435f-8eb4-dc284ebb0fc0" stretchType="RelativeToTallestObject" x="341" y="0" width="198" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{descripcionTxt}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 </jasperReport>
