--- a/src/main/webapp/resources/css/jsfcrud.css
+++ b/src/main/webapp/resources/css/jsfcrud.css
@@ -717,4 +717,22 @@ img.right {
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.12);
 }
 
+.formSeparator {
+    background-image: url(../../images/separator_bg.gif);
+    background-repeat: repeat-x;
+    background-position: left center;
+    overflow: hidden;
+    width: 100%;
+}
+
+.formSeparator h2 {
+    color: #19355E;
+    font-weight: bold;
+    font-size: 11px;
+    margin: 2px 10px;
+    padding: 0px 4px;
+    background: #ffffff;
+    float: left;
+}
+
 
